--- a/src/styles/3-layout/_footer.scss
+++ b/src/styles/3-layout/_footer.scss
@@ -3,16 +3,19 @@
     position: fixed;
     bottom: 0;
     z-index: 8;
+    width: 100%;
+    // min-height: 3.75em;
     background-color: #151515;
     box-shadow: 0 -10px 10px 0 rgba(0,0,0,.5);
     // box-shadow: 0 -10px 10px 0 rgba(0,0,0,.5), inset rgba(255, 255, 255, 0.3) 0px 3px 4px 1px;
 
     &__list {
         display: flex;
-        height: 60px;
-        width: 40%;
-        min-width: 240px;
-        padding: 0;
+        min-height: 3.75em;
+        width: 70%;
+        min-width: 12em;
+        max-width: 20em;
+        padding: 0.5em 0;
         align-items: center;
         list-style-type: none;
         justify-content: space-evenly;
@@ -21,9 +24,9 @@
 
     &__link {
         display: flex;
-        width: 35px;
-        height: 35px;
-        background: #ffffff;
+        width: 2.75em;
+        height: 2.75em;
+        background: var(--clr-light);
         border-radius: 50%;
         box-shadow: inset 0 3px 0px rgba(255, 255, 255, 0.527), inset 0 -3px 0px rgba(0, 0, 0, 0.18);
         justify-content: center;
