--- a/src/styles/3-layout/_navigation.scss
+++ b/src/styles/3-layout/_navigation.scss
@@ -2,12 +2,11 @@
 .header {
     position: fixed;
     top: 0;
-    width: 100%;
-    min-height: $navbar-min-height;
+    width: 100vw;
+    min-height: var(--navbar-min-height);
     z-index: 7;
-    background: rgb(153, 81, 183);
+    background: var(--clr-primary);
     box-shadow: rgba(0,0,0,0.35) 0 0 5px 5px;
-    // box-shadow: rgba(0, 0, 0, 0.35) 0px 0px 5px 5px, inset rgba(255, 255, 255, 0.3) 0px -3px 4px;
     text-align: center;
 
     &__logo {
@@ -43,7 +42,7 @@
         span::before,
         span::after {
             display: block;
-            background: white;
+            background: var(--clr-light);
             height: 2px;
             width: 2em;
             border-radius: 2px;
@@ -73,7 +72,7 @@
         left: 0;
         width: 100%;
         padding-top: 1em;
-        background: rgb(153, 81, 183);
+        background: var(--clr-primary);
         box-shadow: rgba(0,0,0,0.35) 0 5px 5px 5px;
         text-align: left;
 
@@ -93,7 +92,7 @@
         }
     
         &__link {
-            color: #ffffff;
+            color: var(--clr-light);
             text-decoration: none;
             text-transform: uppercase;
             opacity: 0;
@@ -145,7 +144,7 @@
                 display: block;
                 height: 3px;
                 border-radius: 2px;
-                background: white;
+                background: var(--clr-light);
                 position: relative;
                 left: 0;
                 right: 0;
