--- a/src/styles/4-modules/_welcomeAnimation.scss
+++ b/src/styles/4-modules/_welcomeAnimation.scss
@@ -92,6 +92,7 @@
         align-items: center;
         width: $container-width;
         height: $container-height;
+        z-index: 1;
         overflow: hidden;
         background-color: $background-color;
         top: $top;
